chore(masthead): fix overflow/tests

--- a/packages/web-components/src/components/masthead/masthead.scss
+++ b/packages/web-components/src/components/masthead/masthead.scss
@@ -131,6 +131,7 @@
 :host(#{$dds-prefix}-top-nav),
 :host(#{$dds-prefix}-top-nav-l1) {
   display: none;
+  overflow: hidden;
 
   @include carbon--breakpoint(800px) {
     flex: 1;
